# VistA

./: .gitattributes  .gitignore  .hooks-config.bash  BUILD  BUILD-Delphi.rst  CMakeLists.txt  CTestConfig.cmake  CacheCallerGraph.cmake.in  CacheUnitTest.cmake.in  CacheUnitTest.scp.in  CacheXINDEXScript.in  CacheXINDEXscript.ahk.in  CacheXindexCallerGraph.scp.in  ClinicSetup.py.in  CommonFunctions.cmake  FileManGlobalAttributes.py.in  GTMEnvironment.sh.in  GTMImportRG.cmake.in  GlobalImport.ahk.in  GlobalImport.py.in  GlobalImport.scp.in  GlobalImportandInitializeGTM.exp.in  ImportRG.cmake.in  Initialize.ahk.in  Initialize.py.in  Initialize.scp.in  InstallMUnitKIDSBuild.exp.in  InstallMUnitKIDSBuild.py.in  InstallMUnitKIDSBuild.scp.in  NOTICE  Nightly.sh.in  Packages.csv  PostImportSetupScript.py.in  PythonRoutine.cmake.in  README  README.md  README.rst  RoutineImport.ahk.in  RoutineImport.py.in  RoutineImport.scp.in  (+20 more)
CMake/: Build.cmake.in  CTestCustom.cmake.in  CommonFunctions.cmake  Delphi.cmake  FindCacheOrGTM.cmake  UseCache.cmake  UseGTM.cmake
Cache/: configureFirewall.sh  createDaemonAccount.sh  install.sh  parameters.isc
DashboardScripts/: README  vista_common.cmake
Documentation/: AddingTests.rst  AutomatedVistAConfiguration.rst  ChoosingMUMPSEnvironment.rst  CodeReviewAccess.rst  ConfigureCache.rst  ContributorInstructions.rst  ImportCache.rst  ImportGTM.rst  Initialization.rst  InstallCache.rst  InstallCacheDat.rst  InstallGTM.rst  InstallPatches.rst  ObtainingTestingCode.rst  ObtainingVistAMCode.rst  ObtainingandInstallAuxPrograms.rst  PrepareMComponents.rst  README.rst  ReviewingResults.rst  RunningandUploadingTests.rst  SetupTestingEnvironment.rst  Troubleshooting.rst  generateDockerViViaNAndDox.rst  generateViViaNAndDox  generateViViaNAndDox.rst  populateMRepo.rst  reviewOTJSubmission.rst  setupDox.rst  submittingToOTJ.rst  testingChanges.rst
Dox/: PercentRoutineMapping.csv  PlatformDependentRoutine.csv
FunctionalTest/: CMakeLists.txt
FunctionalTestingSuite/: CPRSPostImportSetupScript.py.in  (+2 more)
Testing/: CMakeLists.txt  CTestCustom.cmake.in  CacheVerifyTelnet.scp.in  UnitTest.cmake.in  UnitTest.py.in  VerifyFields.py.in  XINDEXScript.cmake.in  XINDEXScript.py  XINDEXScript.py.in  pexpectTest.py
Testing/CPRS/: CPRSTesting.dproj.in
Testing/Functional/: CMakeLists.txt  README.txt
Testing/Functional/RAS/: RASTest.cmake.in
Testing/Functional/RAS/lib/: ADTActions.py  Actions.py  CPRSActions.py  CompSCActions.py  ORActions.py  PATActions.py  PLActions.py  SCActions.py
Testing/Functional/Sikuli/FunctionalTesting.sikuli/: FunctionalTesting.html.in  FunctionalTesting.py.in
Testing/Functional/dataFiles/: NISTambudata0.csv  NISTambudata0chg.csv  NISTinpatientdata0.csv  NISTinpatientdata0chg.csv  patdata0.csv  probdata0.csv
Testing/OTJ/: CMakeLists.txt  OTJTestDriver.cmake.in
Testing/OTJ/Problem List Refactoring/Patches/: GMPL_2.0_260002_RC6_MB.KID
Testing/OTJ/VA FileMan 22.2/: .gitignore  VA FILEMAN 22.2.py  VA-FILEMAN-22P2.RSA.sha1  VA_FILEMAN_22.2.KID  VistAInitFileMan.py
Testing/Python/: MenuTraversalSmokeTest.py.in  MenuTraversalTest.py.in  PackagePrefixSample.csv  ParseGTMRoutines.py  ParseGTMRoutinesTest.py.in  PrefixParserTest.py
Testing/Setup/: CMakeLists.txt  ClinicSetup.py.in  DGPRD1.gtm.ro  DPTLK7.all.ro  GlobalImport.py.in  ImportRG.cmake.in  Initialize.py.in  InstallMUnitKIDSBuild.py.in  PostImportSetupScript.py.in  RoutineImport.py.in  SDTMPHLA.all.ro  XINDX2.gtm.ro  foia-vista-fixes.gtm.ro  importPats.py.in  importUsers.py.in
Testing/Setup/Patches/MUnit/: MASH-0_1-0_M-Unit_Test_140910.KID  MASH_0.1_0.py  MASH_1.3_0.KID  MASH_1.3_0.py  XT73P101T9.kid  XT73P107T4.KID  XT73P81T13.kid
Testing/UserTest/: CMakeLists.txt
Utilities/Dox/: CMakeLists.txt  DIBTOUT.csv  DIETOUT.csv  DIPTOUT.csv  FileManGlobalAttributes.py.in  FileManGlobalDataParser.cmake.in  GeneratePackageDep.cmake.in  GenerateRepoInfo.cmake.in  GetFilemanSchema.cmake.in  GraphGenerator.cmake.in  ICRParser.cmake.in  MRoutineAnalyzer.cmake.in  NameNumberspaceGen.cmake.in  PackageToVDL.csv  PercentRoutineMapping.csv  PlatformDependentRoutine.csv  README  RequirementsParser.cmake.in  WebPageGenerator.cmake.in  XINDEXInstall.cmake.in  XindexCallerGraph.cmake.in  XindexCallerGraph.py.in  callerGraph_color_legend.dot
Utilities/Dox/Data/: nameSpaceData.json  notes-for-update.txt  numberSpaceData.json
Utilities/Dox/Patches/: XT-7p3-10001T4.KID
Utilities/Dox/PythonScripts/: ArgParserHelper.py  CallerGraphParser.py  CrossRefExternalize.py  CrossReference.py  CrossReferenceBuilder.py  CrossReferenceConsole.py  DataDictionaryParser.py  DataTableHtml.py  FileManDataToHtml.py  FileManDbCallParser.py  FileManFileOutputFormat.py  FileManGlobalDataParser.py  FileManSchemaParser.py  GenerateNameNumberPages.py  GenerateRepoInfo.py  GraphGenerator.py  HTMLUtilityFunctions.py  ICRFileToJson.py  ICRJsonToCsv.py  ICRJsonToHtml.py  ICRParser.py  ICRParserTest.py  ICRSchema.py  ICRTest.JSON  ICRTest.txt  InitCrossReferenceGenerator.py  LogManager.py  PDFUtilityFunctions.py  PDF_Script.js  PackageDependencyGenerator.py  RequirementsJSONtoHTML.py  RequirementsParser.py  RequirementsXLStoJSON.py  UtilityFunctions.py  WebPageGenerator.py  ZWRGlobalParser.py
Utilities/Dox/PythonScripts/ICR_TEST/ICR/: 807-ICR.html  All-ICR List.html  General Medical Record - Vitals-ICR.html  ICR-10034.html  ICR-10035.html  ICR-10104.html  ICR-10155.html  ICR-10156.html  ICR-1068.html  ICR-1151.html  ICR-16.html  ICR-1973.html  ICR-214.html  ICR-28.html  ICR-3103.html  ICR-3248.html  ICR-3996.html  ICR-4528.html  ICR-4849.html  ICR-4887.html  ICR-5317.html  ICR-5499.html  ICR-6104.html  ICR-6280.html  ICR-639.html  ICR-6730.html  ICR-85.html  ICR-91.html  ICR-977.html  ICR-PackageDep.html  IFCAP-ICR.html  Imaging-ICR.html  Kernel-ICR.html  Lab Service-ICR.html  MailMan-ICR.html  Mental Health-ICR.html  Order Entry Results Reporting-ICR.html  Outpatient Pharmacy-ICR.html  Record Tracking-ICR.html  Registration-ICR.html  (+4 more)
Utilities/Dox/Web/: DoxygenStyle.css  footer.html  header.html  index.html  source_header.html
(+1400 files in other folders)
